<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">on_a_budget</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_all_expense">All Expense</string>
  <string name="lbl_note">Note</string>
  <string name="lbl_60">60%</string>
  <string name="msg_we_are_showing">We are showing last 10 notification</string>
  <string name="lbl_62">6%</string>
  <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign up</string>
  <string name="msg_confirm_passwor">Confirm password</string>
  <string name="lbl_transpora">Transpora...</string>
  <string name="lbl_add_note">Add note </string>
  <string name="lbl_x">x</string>
  <string name="lbl_reset_password">Reset password</string>
  <string name="lbl_sports">Sports</string>
  <string name="lbl_bdt">Bdt</string>
  <string name="lbl_change_currency">Change currency</string>
  <string name="msg_enter_the_name">Enter the name of your custom expense category</string>
  <string name="lbl_52">5%</string>
  <string name="msg_congratulations10">Congratulations! You have successfully update
expense budget 5,000 into Baby category </string>
  <string name="msg_congratulations11">Congratulations! You have successfully add 
3,000 into Baby category </string>
  <string name="lbl_analytics">Analytics</string>
  <string name="lbl_start_date">Start Date</string>
  <string name="msg_congratulations12">Congratulations! You have successfully update
expense  5,000 into Baby category </string>
  <string name="lbl_fabruary_23">Fabruary-23</string>
  <string name="lbl_social">Social</string>
  <string name="lbl_budgetman">BudgetMan</string>
  <string name="lbl_month">Month</string>
  <string name="lbl_records">Records</string>
  <string name="lbl_c">C</string>
  <string name="lbl_5_000">5,000</string>
  <string name="msg_edit_daily_expe">Edit daily expense</string>
  <string name="msg_edit_expense_ca">Edit expense category</string>
  <string name="lbl_date">Date</string>
  <string name="msg_congratulations2">Congratulations! You have successfully make
20,000 in 3 months</string>
  <string name="msg_congratulations3">Congratulations! You have successfully download
your savings reports</string>
  <string name="msg_congratulations4">Congratulations! You have successfully download
your expense reports</string>
  <string name="msg_congratulations5">Congratulations! You have successfully update
expense records 5,000 into Baby category </string>
  <string name="msg_congratulations6">Congratulations! You have save 20,000 in 
February</string>
  <string name="lbl_30_days">30 Days</string>
  <string name="lbl_40">40%</string>
  <string name="lbl_6_85">6.85%</string>
  <string name="lbl_amount">Amount</string>
  <string name="lbl_opps">Opps!</string>
  <string name="msg_opps_you_are_n">Opps! you are nearly going to cross your budget 
limit in food</string>
  <string name="lbl_welcome">Welcome</string>
  <string name="lbl_bills">Bills</string>
  <string name="lbl_password">Password</string>
  <string name="msg_congratulation">Congratulation ! on your sav...</string>
  <string name="lbl_select_date">Select date</string>
  <string name="lbl_edit_note">Edit note </string>
  <string name="lbl_total_income">Total income</string>
  <string name="lbl_category">Category </string>
  <string name="msg_forget_password">Forget password ?</string>
  <string name="lbl_1_00_000">1,00,000</string>
  <string name="lbl_menu">Menu</string>
  <string name="lbl_6_66">6.66%</string>
  <string name="lbl_savings">Savings</string>
  <string name="lbl_8_08">8.08%</string>
  <string name="msg_figure_march_22">Figure: March 2023 Expense planning</string>
  <string name="lbl_edit_records">Edit Records</string>
  <string name="lbl_sign_up">Sign up</string>
  <string name="msg_please_wait_we">Please wait we are processing with your data ....</string>
  <string name="msg_figure_march_2">Figure: March 2023 Savings planning</string>
  <string name="lbl_10_000">10,000</string>
  <string name="msg_expenses_in_dif3">Expenses in different categories </string>
  <string name="lbl_7_47">7.47%</string>
  <string name="msg_expenses_in_dif2">Expenses in different categories (update till today)</string>
  <string name="lbl_submit">Submit</string>
  <string name="msg_congratulations7">Congratulations! You have successfully set 
expense budget 10,000 into Health </string>
  <string name="msg_congratulations8">Congratulations! You have successfully add
a custom expense category </string>
  <string name="msg_congratulations9">Congratulations! You have successfully set
1,00,000 to monthly income</string>
  <string name="lbl_save">Save</string>
  <string name="lbl_100003">10000 </string>
  <string name="lbl_100002">10000</string>
  <string name="lbl_expense2">Expense </string>
  <string name="msg_40_of_1_00_00">(40% of 1,00,0000 earnings)</string>
  <string name="msg_60_of_1_00_00">(60% of 1,00,0000 earnings)</string>
  <string name="lbl_02">02</string>
  <string name="msg_savings_so_far">(savings so far this year)</string>
  <string name="lbl_or_sign_in_with">or sign in with</string>
  <string name="lbl_insurance">Insurance</string>
  <string name="msg_5_of_1_00_000">(5% of 1,00,0000 earnings)</string>
  <string name="msg_set_expense_bud">Set expense budget </string>
  <string name="msg_you_are_going_t2">You are going to add 3,000 to Baby category</string>
  <string name="lbl_change_date">Change date</string>
  <string name="lbl_7_15">7.15%</string>
  <string name="msg_add_daily_expen">Add daily expense</string>
  <string name="lbl_5_5">5.5%</string>
  <string name="lbl_planner">Planner</string>
  <string name="lbl_enter_email">Enter email </string>
  <string name="msg_budgetman_is_a">BudgetMan is a budget organizer app where you
can set a monthly budget for different categories
which will be used to automatically calculate the 
monthly, weekly, and daily budget for each
category.</string>
  <string name="msg_add_note_optio">Add note (Optional)</string>
  <string name="lbl_add">Add</string>
  <string name="msg_targeted_saving">Targeted savings plan</string>
  <string name="lbl_2_26">2.26%</string>
  <string name="lbl_20_000">20,000</string>
  <string name="lbl_80_000">80,000</string>
  <string name="lbl_savings_plan">Savings plan</string>
  <string name="msg_expenses_in_dif">Expenses in different categories</string>
  <string name="msg_expense_update">Expense (update till today)</string>
  <string name="msg_targeted_expens">Targeted expense plan</string>
  <string name="lbl_remain_1_000">Remain:1,000</string>
  <string name="lbl_march_23">March-23</string>
  <string name="lbl_back">Back</string>
  <string name="lbl_next">Next</string>
  <string name="lbl_download">Download</string>
  <string name="lbl_telephone">Telephone</string>
  <string name="msg_add_to_expense">Add to expense plan</string>
  <string name="lbl2">=</string>
  <string name="lbl_savings_so_far">Savings 
so far</string>
  <string name="lbl_home">Home</string>
  <string name="msg_already_have_an">Already have an account? Sign in</string>
  <string name="lbl_3_000">3,000</string>
  <string name="lbl_300">300</string>
  <string name="msg_custom_expense">Custom expense category </string>
  <string name="lbl_2_8">2.8%</string>
  <string name="lbl_expense_records">Expense records</string>
  <string name="lbl_sign_in">Sign in</string>
  <string name="lbl_spend_4_000">Spend: 4,000</string>
  <string name="lbl_send_otp_again">Send OTP again</string>
  <string name="lbl_notifications">Notifications</string>
  <string name="lbl_remain_90_000">Remain:90,000</string>
  <string name="lbl_spend_10_000">Spend: 10,000</string>
  <string name="lbl_expense">Expense</string>
  <string name="lbl_transporatation">Transporatation</string>
  <string name="lbl_savings_records">Savings records</string>
  <string name="msg_savings_in_last">Savings in last 3 months</string>
  <string name="msg_opps_you_have">Opps ! You have spend 50,000 form 01-03-2023 to
18-03-2023 in 18 days in 8 expense categories </string>
  <string name="lbl_10_03_2023">10/03/2023</string>
  <string name="lbl_60_000">60,000</string>
  <string name="lbl_end_date">End Date</string>
  <string name="lbl_entertainm">Entertainm..</string>
  <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
  <string name="lbl_electronics">Electronics</string>
  <string name="msg_edit_daily_expe2">Edit daily expense </string>
  <string name="msg_limitation_is_c">limitation is crossing on food</string>
  <string name="msg_simply_s_simply">simply s simply dummy
simply s simply dummy </string>
  <string name="lbl_income">Income</string>
  <string name="msg_you_are_updatin">You are updating 5,000 to Baby category</string>
  <string name="lbl_2024">2024</string>
  <string name="lbl_otp">OTP</string>
  <string name="lbl_4_40_000">4,40,000</string>
  <string name="msg_already_have_an2">Already have an account? </string>
  <string name="lbl_lets_go">Lets go</string>
  <string name="lbl_send_otp">Send OTP</string>
  <string name="msg_select_expense">Select expense category</string>
  <string name="lbl_3_3">3.3%</string>
  <string name="lbl_submit_otp">Submit OTP</string>
  <string name="lbl_baby">Baby</string>
  <string name="lbl_march_2023">March 2023</string>
  <string name="lbl_sport">Sport</string>
  <string name="msg_set_new_passwor">Set new password</string>
  <string name="lbl_january_23">January-23</string>
  <string name="lbl_expense_plan">Expense plan</string>
  <string name="lbl_shopping">Shopping</string>
  <string name="msg_you_are_going_t">You are going to set 10,000 to health category</string>
  <string name="lbl_food">Food</string>
  <string name="msg_add_monthly_inc">Add monthly income</string>
  <string name="msg_results_showin2">Results: Showing 70</string>
  <string name="lbl_entertainment">Entertainment</string>
  <string name="lbl_5_16">5.16%</string>
  <string name="lbl_enter_note">Enter note</string>
  <string name="lbl_remain_30_000">Remain:30,000</string>
  <string name="msg_edit_expense_pl">Edit expense plan</string>
  <string name="lbl_spend_3_000">Spend: 3,000</string>
  <string name="lbl_beauty">Beauty</string>
  <string name="lbl_car">Car</string>
  <string name="lbl_baby2">Baby  </string>
  <string name="lbl_expense_planner">Expense planner</string>
  <string name="lbl">.</string>
  <string name="lbl_5_29">5.29%</string>
  <string name="msg_congratulations">Congratulations! You have successfully change
your currency</string>
  <string name="lbl_40_000">40,000</string>
  <string name="lbl_82">8%</string>
  <string name="lbl_email">Email </string>
  <string name="lbl_0">0</string>
  <string name="lbl_4">4</string>
  <string name="lbl_5">5</string>
  <string name="lbl_6">6</string>
  <string name="msg_10_of_1_00_00">(10% of 1,00,0000 earnings)</string>
  <string name="lbl_7">7</string>
  <string name="lbl_8">8</string>
  <string name="msg_your_currency_i">Your currency is now Bdt</string>
  <string name="lbl_9">9</string>
  <string name="msg_make_proper_pla">Make proper planning to grow your money using
budget man</string>
  <string name="msg_edit_note_opti">Edit note (Optional)</string>
  <string name="lbl_health">Health</string>
  <string name="msg_results_showin">Results: Showing 3</string>
  <string name="lbl_tax">Tax</string>
  <string name="lbl_optional">(Optional)</string>
  <string name="lbl_clothing">Clothing</string>
  <string name="lbl_congratulations">Congratulations</string>
  <string name="msg_add_custom_expe">Add custom expense category</string>
  <string name="lbl_education">Education</string>
  <string name="msg_update_till_to">(update till today)</string>
  <string name="lbl_4_35">4.35%</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
