<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listgroup142RowModel" type="com.finance.onabudget.app.modules.analyticsexpenseplan.data.model.Listgroup142RowModel"/>
    </data>
    <FrameLayout android:id="@+id/frameStackgroup142"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" style="@style/groupStylewhite_2">
        <ProgressBar android:id="@+id/progressBarGroup142"
            android:indeterminate="false"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:max="100"
            android:minHeight="@dimen/_8pxv" android:progress="80"
            android:progressDrawable="@drawable/layer_list_bg_teal_500_26_radius_4" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        <LinearLayout android:id="@+id/linearRow"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:id="@+id/linearRowsettings"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.32" android:layout_width="0dp" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_bg_teal_500_26_radius_15"
                    android:id="@+id/btnSettingsFive"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_width="@dimen/_30pxh"
                    android:paddingHorizontal="@dimen/_3pxh"
                    android:paddingVertical="@dimen/_3pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_settings" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_weight="0.47"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{listgroup142RowModel.txtLanguage}"
                    style="@style/txtRobotoromanmedium12" tools:text="@string/lbl_baby2"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRow5of100000"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginStart="@dimen/_100pxh"
                android:layout_weight="0.68" android:layout_width="0dp" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txt5of100000"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.82"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="@{listgroup142RowModel.txt5of100000}"
                    style="@style/txtRobotoromanlight8" tools:text="@string/msg_5_of_1_00_000"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt5000"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.18"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_2pxh"
                    android:singleLine="true"
                    android:text="@{listgroup142RowModel.txt5000}"
                    style="@style/txtRobotoromanmedium8" tools:text="@string/lbl_5_000"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSpendCounter"
            android:layout_gravity="bottom|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3pxv"
            android:layout_marginEnd="@dimen/_99pxh"
            android:layout_marginStart="@dimen/_99pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:singleLine="true"
            android:text="@{listgroup142RowModel.txtSpendCounter}"
            style="@style/txtRobotoromanregular8" tools:text="@string/lbl_spend_4_000"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtRemain1000"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:singleLine="true"
            android:text="@{listgroup142RowModel.txtRemain1000}"
            style="@style/txtRobotoromanregular8" tools:text="@string/lbl_remain_1_000"/>
    </FrameLayout>
</layout>
